kubernetes/apps/observability/headlamp/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/name: headlamp
    app.kubernetes.io/part-of: headlamp
  name: headlamp
spec:
  hostnames:
    - headlamp.laurivan.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
